--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "toboggan.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/*"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "alkawryk",
+  "license": "MIT",
+  "repository": "https://github.com/alkawryk/toboggan.git",
   "dependencies": {
     "bluebird": "^2.3.2",
     "should": "^4.0.4"
